k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedalboard-service-frontend
spec:
  selector:
    app: frontend-pedalboard
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: frontend
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: pedalboard-service-backend

spec:
  selector:
    app: backend-pedalboard
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: backend
  type: NodePort
